# RedAntivirus

./: CMakeLists.txt  README.md  install.sh  redAntivirus.service  uninstall.sh
Antivirus/Analyzer/: Analyzer.cpp
Antivirus/Core/: Core.cpp  Core.hpp  Main.cpp  SmartKiller.cpp  Utils.cpp
Antivirus/Syscalls/: Daemon.cpp  SyscallsHandler.cpp
Commander/: Commander.cpp
TestVirus/: TestVirus.c
